Bug 1059138 band-aid: Skip flex item sortedness assertion if the first flex item is part of a shadow DOM. r=bz

Not sure what the right fix is here yet, but this should stop the new 'gaia-header' web component from making this dominate the logcat output.